--- a/work_analysis/Initial_analysis.ipynb
+++ b/work_analysis/Initial_analysis.ipynb
@@ -1524,6 +1524,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lets move this over to a formal notebook for Modelling!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
